--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,9 +8,9 @@ titles_from_headings:
 
 # Modify the contents below for the specific project. NOTE THE INDENTATION!
 
-title: "Android Project Proposal"
-description: "Trust me, it'll be cool!"
-author:
+title: "Water reminder"
+description: "An app to help with water intake goals"
+author: Royce Reano
   name: "Java+Android Student"
 
 # Do not change the following line.
