Made changes to app proposal.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -9,7 +9,7 @@ titles_from_headings:
 # Modify the contents below for the specific project. NOTE THE INDENTATION!
 
 title: "Water reminder"
-description: "An app to help with water intake goals"
+description: "An app to look at daily astronomy pictures"
 author:
   name: "Royce Reano"
 
