--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
 
-        applicationId "edu.cnm.deepdive.waterreminder"
+        applicationId "edu.cnm.deepdive.astronomypictures"
         minSdkVersion 26
         targetSdkVersion 30
         versionCode 1
