--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
-  package="edu.cnm.deepdive.waterreminder">
+  package="edu.cnm.deepdive.astronomypictures">
 
   <application
-    android:name="edu.cnm.deepdive.waterreminder.WaterReminderApplication"
+    android:name="edu.cnm.deepdive.astronomypictures.WaterReminderApplication"
     android:allowBackup="false"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
