--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -8,7 +8,7 @@ titles_from_headings:
 
 # Modify the contents below for the specific project. NOTE THE INDENTATION!
 
-title: "Water reminder"
+title: "Astronomy Pictures"
 description: "An app to look at daily astronomy pictures"
 author:
   name: "Royce Reano"
