--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,22 @@
 apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
 
+String getLocalProperty(String name) {
+    Properties properties = new Properties()
+    properties.load(new FileInputStream("$projectDir/local.properties"))
+    return properties.getProperty(name)
+}
+
+static String getProperty(String filename, String name) {
+    Properties properties = new Properties()
+    properties.load(new FileInputStream(filename))
+    return properties.getProperty(name)
+}
+
+static String quoted(String input) {
+    return "\"$input\""
+}
+
 android {
 
     compileSdkVersion = 31
@@ -14,6 +30,9 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField 'String', 'CLIENT_ID',
+                quoted(getProperty("$projectDir/../../../services/astronomypictures.properties", 'client_id'))
 
         resValue "string", "app_name", rootProject.name
 
@@ -40,64 +59,113 @@ android {
 }
 
 dependencies {
+    // Basic Android Support Libraries
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
-    // .jar-based libraries included in project
-    implementation fileTree(dir: "libs", include: ["*.jar"])
+    // Material Design Components
+    implementation 'com.google.android.material:material:1.4.0'
 
-    // Basic Android components
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
-    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+    // Preferences/settings library
+    implementation 'androidx.preference:preference:1.1.1'
 
-    // Fragment & navigation framework libraries
-    implementation 'androidx.fragment:fragment:1.3.6'
+    // Navigation Libraries
+    implementation 'androidx.fragment:fragment:1.4.0'
     implementation "androidx.navigation:navigation-fragment:$navigationVersion"
     implementation "androidx.navigation:navigation-ui:$navigationVersion"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
 
-    // Lifecycle (LiveData and ViewModel) libraries
-    def lifecycleVersion = '2.3.1'
+    // Lifecycle (LiveData and ViewModel Libraries)
+    def lifecycleVersion = '2.4.0'
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycleVersion"
 
-    // Material Design components
-    implementation 'com.google.android.material:material:1.4.0'
-
-    // ReactiveX libraries
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-
-    // Room annotation processor, runtime library, and ReactiveX integration
+    // Room Libraries & Connectors
     def roomVersion = '2.3.0'
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
     implementation "androidx.room:room-rxjava2:$roomVersion"
 
-    // Gson (Google JSON parser) library
-    implementation 'com.google.code.gson:gson:2.8.8'
+    // Gson Library
+    implementation 'com.google.code.gson:gson:2.8.9'
 
-    // Retrofit (REST client) with ReactiveX & Gson integration
+    // Retrofit Libraries
     def retrofitVersion = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
-    // Picasso image retrieval library
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    // OkHTTP Library
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
 
-    // OkHttp logging dependency
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    // ReactiveX Libraries
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
-    // Stetho (inspection) dependency
+    // Google Sign-In Library
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+    // Stetho (Chromium inspection) Library
     implementation 'com.facebook.stetho:stetho:1.6.0'
 
-    // Unit & UI testing libraries
+    // Test Libraries
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+}
+
+task generateApiDoc() {
+    group "reporting"
+    description "Generates all Javadoc."
+}
+
+android.applicationVariants.all { variant ->
+
+    def task = project.tasks.create("generate${variant.name.capitalize()}Javadoc", Javadoc) {
+
+        title "$rootProject.name (${project.android.defaultConfig.versionName})"
+        group "ApiDoc"
+        description "Generates Javadoc for $variant.name."
+
+        source = variant.sourceSets.collect { it.java.sourceFiles }.inject { m, i -> m + i }
+
+        doFirst {
+            classpath = project.files(
+                    file(projectDir)
+                            .toPath()
+                            .resolve("build/intermediates/javac/${variant.name}/classes"),
+                    variant.javaCompileProvider.get().classpath.files,
+                    project.android.getBootClasspath()
+            )
+        }
+
+        exclude '**/R'
+        exclude '**/R.**'
+        exclude '**/R\$**'
+        exclude '**/BuildConfig*'
+
+        destinationDir = file("$projectDir/../docs/api")
+
+        options {
+            windowTitle = "$rootProject.name (${project.android.defaultConfig.versionName})"
+            memberLevel = JavadocMemberLevel.PROTECTED
+            linkSource = false
+            author = false
+            links 'https://docs.oracle.com/javase/8/docs/api/'
+            linksOffline 'https://developer.android.com/reference', "$projectDir/.."
+        }
+
+        if (JavaVersion.current().isJava8Compatible()) {
+            options.addStringOption('Xdoclint:none', '-quiet')
+        }
+
+        failOnError true
+
+    }
+
+    task.dependsOn "assemble${variant.name.capitalize()}"
+    generateApiDoc.dependsOn task
 }
