--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,13 @@
     android:supportsRtl="true"
     android:theme="@style/AppTheme"
     tools:ignore="AllowBackup">
+
+    <activity android:name=".controller.LoginActivity"
+      android:exported="true"/>
+
     <activity
       android:exported="true"
-      android:label="@string/title_activity_main"
+      android:label="@string/app_name"
       android:name=".controller.MainActivity"
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
