--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,18 @@ android {
 
         resValue "string", "app_name", rootProject.name
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [
+                        'room.schemaLocation': "$projectDir/schemas".toString()
+                ]
+            }
+        }
+
+
     }
+
+
 
     buildTypes {
         release {
@@ -57,6 +68,7 @@ android {
     }
 
 }
+
 
 dependencies {
     // Basic Android Support Libraries
