--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,12 @@ android {
         buildConfigField 'String', 'CLIENT_ID',
                 quoted(getProperty("$projectDir/../../../services/astronomypictures.properties", 'client_id'))
 
+        buildConfigField 'String', 'API_KEY',
+                quoted(getProperty("$projectDir/../../../services/astronomypictures.properties", 'api_key'))
+
+        buildConfigField 'String', 'BASE_URL',
+                quoted(getProperty("$projectDir/../../../services/astronomypictures.properties", 'base_url'))
+
         resValue "string", "app_name", rootProject.name
 
         javaCompileOptions {
@@ -113,6 +119,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.2'
 
     // ReactiveX Libraries
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
 
@@ -121,6 +128,9 @@ dependencies {
 
     // Stetho (Chromium inspection) Library
     implementation 'com.facebook.stetho:stetho:1.6.0'
+
+    // picasso library
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Test Libraries
     testImplementation 'junit:junit:4.13.2'
